--- a/literature_ia_models/Linear_IA_Demo.ipynb
+++ b/literature_ia_models/Linear_IA_Demo.ipynb
@@ -37,20 +37,21 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'intrinsic_alignments'",
+     "ename": "ImportError",
+     "evalue": "cannot import name 'call_transform' from 'pyfftlog.pyfftlog' (/home/nvanalfen/miniconda3/lib/python3.8/site-packages/pyfftlog/pyfftlog.py)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m----------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-5b640241b019>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mintrinsic_alignments\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mia_models\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinear_alignment_models\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mLinearAlignmentModel\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mLA\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mintrinsic_alignments\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mia_models\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinear_alignment_models\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mNonLinearAlignmentModel\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mNLA\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'intrinsic_alignments'"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-4956d4d48873>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mintrinsic_alignments\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mliterature_ia_models\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinear_alignment_models\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mLinearAlignmentModel\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mLA\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mintrinsic_alignments\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mliterature_ia_models\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinear_alignment_models\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mNonLinearAlignmentModel\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mNLA\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/github_repos/intrinsic_alignments/intrinsic_alignments/literature_ia_models/linear_alignment_models.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minterpolate\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0minterp1d\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;31m#from pyfftlog.pyfftlog import pk2xi, call_transform\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mpyfftlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyfftlog\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcall_transform\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mintegrate\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mintegrate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mintrinsic_alignments\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mia_models\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcosmo_utils\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mlinear_growth_factor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmean_density\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlinear_power_spectrum\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnonlinear_power_spectrum\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'call_transform' from 'pyfftlog.pyfftlog' (/home/nvanalfen/miniconda3/lib/python3.8/site-packages/pyfftlog/pyfftlog.py)"
      ]
     }
    ],
    "source": [
-    "from intrinsic_alignments.ia_models.linear_alignment_models import LinearAlignmentModel as LA\n",
-    "from intrinsic_alignments.ia_models.linear_alignment_models import NonLinearAlignmentModel as NLA"
+    "from intrinsic_alignments.literature_ia_models.linear_alignment_models import LinearAlignmentModel as LA\n",
+    "from intrinsic_alignments.literature_ia_models.linear_alignment_models import NonLinearAlignmentModel as NLA"
    ]
   },
   {
@@ -309,9 +310,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
