--- a/halo_shape_correlations/notebooks/section_3.ipynb
+++ b/halo_shape_correlations/notebooks/section_3.ipynb
@@ -10,6 +10,7 @@
     "import numpy as np\n",
     "from astropy.table import Table\n",
     "import matplotlib.pyplot as plt\n",
+    "import params\n",
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -17,7 +18,8 @@
     "# location to save figures\n",
     "import os\n",
     "cwd = os.getcwd()\n",
-    "figure_path = cwd + '/../figures/'"
+    "#figure_path = cwd + '/../figures/'\n",
+    "figure_path = params.figure_path"
    ]
   },
   {
@@ -72,7 +74,8 @@
     "rbin_centers = (rbins[:-1]+rbins[1:])/2.0\n",
     "\n",
     "from astropy.io import ascii\n",
-    "fpath = '/Users/duncan/Projects/intrinsic_alignments/halo_shape_correlations/data/'\n",
+    "#fpath = '/Users/duncan/Projects/intrinsic_alignments/halo_shape_correlations/data/'\n",
+    "fpath = params.fpath\n",
     "\n",
     "Nreal = 1000\n",
     "Nbins = len(rbins)-1\n",
@@ -107,7 +110,8 @@
    "outputs": [],
    "source": [
     "from astropy.io import ascii\n",
-    "fpath = '/Users/duncan/Projects/intrinsic_alignments/halo_shape_correlations/data/'\n",
+    "#fpath = '/Users/duncan/Projects/intrinsic_alignments/halo_shape_correlations/data/'\n",
+    "fpath = params.fpath\n",
     "fname = 'smdpl_400_ed.dat'\n",
     "halo_ed = ascii.read(fpath+fname) \n",
     "fname = 'smdpl_400_ee.dat'\n",
@@ -284,7 +288,8 @@
     "rbin_centers = (rbins[:-1]+rbins[1:])/2.0\n",
     "\n",
     "from astropy.io import ascii\n",
-    "fpath = '/Users/duncan/Projects/intrinsic_alignments/halo_shape_correlations/data/'\n",
+    "#fpath = '/Users/duncan/Projects/intrinsic_alignments/halo_shape_correlations/data/'\n",
+    "fpath = params.fpath\n",
     "\n",
     "Nreal = 1000\n",
     "Nbins = len(rbins)-1\n",
@@ -319,7 +324,8 @@
    "outputs": [],
    "source": [
     "from astropy.io import ascii\n",
-    "fpath = '/Users/duncan/Projects/intrinsic_alignments/halo_shape_correlations/data/'\n",
+    "#fpath = '/Users/duncan/Projects/intrinsic_alignments/halo_shape_correlations/data/'\n",
+    "fpath = params.fpath\n",
     "fname = 'smdpl_400_ed.dat'\n",
     "halo_ed = ascii.read(fpath+fname) \n",
     "fname = 'smdpl_400_ee.dat'\n",
@@ -800,21 +806,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.16"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
