changed all eta variables to refer to ee and omega to refer to ed

--- a/halo_shape_correlations/notebooks/subhalo_alignment_models.ipynb
+++ b/halo_shape_correlations/notebooks/subhalo_alignment_models.ipynb
@@ -432,7 +432,7 @@
    "outputs": [],
    "source": [
     "# EE\n",
-    "halo_omega_1h_ss, halo_omega_2h_ss = ee_3d_one_two_halo_decomp(halo_coords[halo_mask], halo_orientations[halo_mask],\n",
+    "halo_eta_1h_ss, halo_eta_2h_ss = ee_3d_one_two_halo_decomp(halo_coords[halo_mask], halo_orientations[halo_mask],\n",
     "                                                        host_ids[halo_mask],\n",
     "                                                        halo_coords[halo_mask], halo_orientations[halo_mask],\n",
     "                                                        host_ids[halo_mask],rbins, \n",
@@ -447,7 +447,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "halo_omega_1h_cs, halo_omega_2h_cs = ee_3d_one_two_halo_decomp(halo_coords[halo_mask], halo_orientations[halo_mask],\n",
+    "halo_eta_1h_cs, halo_eta_2h_cs = ee_3d_one_two_halo_decomp(halo_coords[halo_mask], halo_orientations[halo_mask],\n",
     "                                                        host_ids[halo_mask],\n",
     "                                                        halo_coords[halo_mask], halo_orientations[halo_mask],\n",
     "                                                        host_ids[halo_mask],rbins, \n",
@@ -462,7 +462,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "halo_omega_1h_sc, halo_omega_2h_sc = ee_3d_one_two_halo_decomp(halo_coords[halo_mask], halo_orientations[halo_mask],\n",
+    "halo_eta_1h_sc, halo_eta_2h_sc = ee_3d_one_two_halo_decomp(halo_coords[halo_mask], halo_orientations[halo_mask],\n",
     "                                                        host_ids[halo_mask],\n",
     "                                                        halo_coords[halo_mask], halo_orientations[halo_mask],\n",
     "                                                        host_ids[halo_mask],rbins, \n",
@@ -477,7 +477,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "halo_omega_1h_cc, halo_omega_2h_cc = ee_3d_one_two_halo_decomp(halo_coords[halo_mask], halo_orientations[halo_mask],\n",
+    "halo_eta_1h_cc, halo_eta_2h_cc = ee_3d_one_two_halo_decomp(halo_coords[halo_mask], halo_orientations[halo_mask],\n",
     "                                                        host_ids[halo_mask],\n",
     "                                                        halo_coords[halo_mask], halo_orientations[halo_mask],\n",
     "                                                        host_ids[halo_mask],rbins, \n",
@@ -493,7 +493,7 @@
    "outputs": [],
    "source": [
     "## ED\n",
-    "halo_eta_1h_ss, halo_eta_2h_ss = ed_3d_one_two_halo_decomp(halo_coords[halo_mask], halo_orientations[halo_mask],\n",
+    "halo_omega_1h_ss, halo_omega_2h_ss = ed_3d_one_two_halo_decomp(halo_coords[halo_mask], halo_orientations[halo_mask],\n",
     "                                    host_ids[halo_mask],\n",
     "                                    halo_coords[halo_mask], host_ids[halo_mask],\n",
     "                                    rbins,\n",
@@ -508,7 +508,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "halo_eta_1h_cs, halo_eta_2h_cs = ed_3d_one_two_halo_decomp(halo_coords[halo_mask], halo_orientations[halo_mask],\n",
+    "halo_omega_1h_cs, halo_omega_2h_cs = ed_3d_one_two_halo_decomp(halo_coords[halo_mask], halo_orientations[halo_mask],\n",
     "                                    host_ids[halo_mask],\n",
     "                                    halo_coords[halo_mask], host_ids[halo_mask],\n",
     "                                    rbins,\n",
@@ -523,7 +523,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "halo_eta_1h_sc, halo_eta_2h_sc = ed_3d_one_two_halo_decomp(halo_coords[halo_mask], halo_orientations[halo_mask],\n",
+    "halo_omega_1h_sc, halo_omega_2h_sc = ed_3d_one_two_halo_decomp(halo_coords[halo_mask], halo_orientations[halo_mask],\n",
     "                                    host_ids[halo_mask],\n",
     "                                    halo_coords[halo_mask], host_ids[halo_mask],\n",
     "                                    rbins,\n",
@@ -538,7 +538,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "halo_eta_1h_cc, halo_eta_2h_cc = ed_3d_one_two_halo_decomp(halo_coords[halo_mask], halo_orientations[halo_mask],\n",
+    "halo_omega_1h_cc, halo_omega_2h_cc = ed_3d_one_two_halo_decomp(halo_coords[halo_mask], halo_orientations[halo_mask],\n",
     "                                    host_ids[halo_mask],\n",
     "                                    halo_coords[halo_mask], host_ids[halo_mask],\n",
     "                                    rbins,\n",
@@ -570,17 +570,17 @@
     "\n",
     "fig, ax = plt.subplots(figsize=(3.3,3.3))\n",
     "fig.subplots_adjust(left=0.2, right=0.9, bottom=0.2, top=0.9)\n",
-    "l1, = plt.plot(rbin_centers, halo_omega, '-', color='black')\n",
-    "#l2, = plt.plot(rbin_centers, halo_omega_1h, '-', color='red')\n",
-    "#l3, = plt.plot(rbin_centers, halo_omega_2h, '-', color='blue')\n",
-    "l4, = plt.plot(rbin_centers, halo_omega_1h_cc, '-', color='red')\n",
-    "l5, = plt.plot(rbin_centers, halo_omega_1h_sc, '--', color='red')\n",
-    "l6, = plt.plot(rbin_centers, halo_omega_1h_cs, ':', color='red')\n",
-    "l7, = plt.plot(rbin_centers, halo_omega_1h_ss, '-.', color='red')\n",
-    "l8, = plt.plot(rbin_centers, halo_omega_2h_cc, '-', color='blue')\n",
-    "l9, = plt.plot(rbin_centers, halo_omega_2h_sc, '--', color='blue')\n",
-    "l10, = plt.plot(rbin_centers, halo_omega_2h_cs, ':', color='blue')\n",
-    "l11, = plt.plot(rbin_centers, halo_omega_2h_ss, '-.', color='blue')\n",
+    "l1, = plt.plot(rbin_centers, halo_eta, '-', color='black')\n",
+    "#l2, = plt.plot(rbin_centers, halo_eta_1h, '-', color='red')\n",
+    "#l3, = plt.plot(rbin_centers, halo_eta_2h, '-', color='blue')\n",
+    "l4, = plt.plot(rbin_centers, halo_eta_1h_cc, '-', color='red')\n",
+    "l5, = plt.plot(rbin_centers, halo_eta_1h_sc, '--', color='red')\n",
+    "l6, = plt.plot(rbin_centers, halo_eta_1h_cs, ':', color='red')\n",
+    "l7, = plt.plot(rbin_centers, halo_eta_1h_ss, '-.', color='red')\n",
+    "l8, = plt.plot(rbin_centers, halo_eta_2h_cc, '-', color='blue')\n",
+    "l9, = plt.plot(rbin_centers, halo_eta_2h_sc, '--', color='blue')\n",
+    "l10, = plt.plot(rbin_centers, halo_eta_2h_cs, ':', color='blue')\n",
+    "l11, = plt.plot(rbin_centers, halo_eta_2h_ss, '-.', color='blue')\n",
     "plt.xscale('log')\n",
     "plt.yscale('log')\n",
     "plt.xlabel(r'$r~[h^{-1}\\rm Mpc]$')\n",
@@ -616,17 +616,17 @@
     "\n",
     "fig, ax = plt.subplots(figsize=(3.3,3.3))\n",
     "fig.subplots_adjust(left=0.2, right=0.9, bottom=0.2, top=0.9)\n",
-    "l1, = plt.plot(rbin_centers, halo_eta, '-', color='black')\n",
-    "#l2, = plt.plot(rbin_centers, halo_eta_1h, '-', color='red')\n",
-    "#l3, = plt.plot(rbin_centers, halo_eta_2h, '-', color='blue')\n",
-    "l4, = plt.plot(rbin_centers, halo_eta_1h_cc, '-', color='red')\n",
-    "l5, = plt.plot(rbin_centers, halo_eta_1h_sc, '--', color='red')\n",
-    "l6, = plt.plot(rbin_centers, halo_eta_1h_cs, ':', color='red')\n",
-    "l7, = plt.plot(rbin_centers, halo_eta_1h_ss, '-.', color='red')\n",
-    "l8, = plt.plot(rbin_centers, halo_eta_2h_cc, '-', color='blue')\n",
-    "l9, = plt.plot(rbin_centers, halo_eta_2h_sc, '--', color='blue')\n",
-    "l10, = plt.plot(rbin_centers, halo_eta_2h_cs, ':', color='blue')\n",
-    "l11, = plt.plot(rbin_centers, halo_eta_2h_ss, '-.', color='blue')\n",
+    "l1, = plt.plot(rbin_centers, halo_omega, '-', color='black')\n",
+    "#l2, = plt.plot(rbin_centers, halo_omega_1h, '-', color='red')\n",
+    "#l3, = plt.plot(rbin_centers, halo_omega_2h, '-', color='blue')\n",
+    "l4, = plt.plot(rbin_centers, halo_omega_1h_cc, '-', color='red')\n",
+    "l5, = plt.plot(rbin_centers, halo_omega_1h_sc, '--', color='red')\n",
+    "l6, = plt.plot(rbin_centers, halo_omega_1h_cs, ':', color='red')\n",
+    "l7, = plt.plot(rbin_centers, halo_omega_1h_ss, '-.', color='red')\n",
+    "l8, = plt.plot(rbin_centers, halo_omega_2h_cc, '-', color='blue')\n",
+    "l9, = plt.plot(rbin_centers, halo_omega_2h_sc, '--', color='blue')\n",
+    "l10, = plt.plot(rbin_centers, halo_omega_2h_cs, ':', color='blue')\n",
+    "l11, = plt.plot(rbin_centers, halo_omega_2h_ss, '-.', color='blue')\n",
     "plt.xscale('log')\n",
     "plt.yscale('log')\n",
     "plt.xlabel(r'$r~[h^{-1}\\rm Mpc]$')\n",
@@ -659,7 +659,7 @@
    "outputs": [],
    "source": [
     "# EE\n",
-    "galaxy_omega_1h_cc, galaxy_omega_2h_cc = ee_3d_one_two_halo_decomp(galaxy_coords[gal_mask], galaxy_orientations[gal_mask],\n",
+    "galaxy_eta_1h_cc, galaxy_eta_2h_cc = ee_3d_one_two_halo_decomp(galaxy_coords[gal_mask], galaxy_orientations[gal_mask],\n",
     "                                                             host_ids[gal_mask],\n",
     "                                                             galaxy_coords[gal_mask], galaxy_orientations[gal_mask],\n",
     "                                                             host_ids[gal_mask],\n",
@@ -674,7 +674,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "galaxy_omega_1h_sc, galaxy_omega_2h_sc = ee_3d_one_two_halo_decomp(galaxy_coords[gal_mask], galaxy_orientations[gal_mask],\n",
+    "galaxy_eta_1h_sc, galaxy_eta_2h_sc = ee_3d_one_two_halo_decomp(galaxy_coords[gal_mask], galaxy_orientations[gal_mask],\n",
     "                                                             host_ids[gal_mask],\n",
     "                                                             galaxy_coords[gal_mask], galaxy_orientations[gal_mask],\n",
     "                                                             host_ids[gal_mask],\n",
@@ -689,7 +689,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "galaxy_omega_1h_cs, galaxy_omega_2h_cs = ee_3d_one_two_halo_decomp(galaxy_coords[gal_mask], galaxy_orientations[gal_mask],\n",
+    "galaxy_eta_1h_cs, galaxy_eta_2h_cs = ee_3d_one_two_halo_decomp(galaxy_coords[gal_mask], galaxy_orientations[gal_mask],\n",
     "                                                             host_ids[gal_mask],\n",
     "                                                             galaxy_coords[gal_mask], galaxy_orientations[gal_mask],\n",
     "                                                             host_ids[gal_mask],\n",
@@ -704,7 +704,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "galaxy_omega_1h_ss, galaxy_omega_2h_ss = ee_3d_one_two_halo_decomp(galaxy_coords[gal_mask], galaxy_orientations[gal_mask],\n",
+    "galaxy_eta_1h_ss, galaxy_eta_2h_ss = ee_3d_one_two_halo_decomp(galaxy_coords[gal_mask], galaxy_orientations[gal_mask],\n",
     "                                                             host_ids[gal_mask],\n",
     "                                                             galaxy_coords[gal_mask], galaxy_orientations[gal_mask],\n",
     "                                                             host_ids[gal_mask],\n",
@@ -720,7 +720,7 @@
    "outputs": [],
    "source": [
     "# ED\n",
-    "galaxy_eta_1h_cc, galaxy_eta_2h_cc  = ed_3d_one_two_halo_decomp(galaxy_coords[gal_mask], galaxy_orientations[gal_mask],\n",
+    "galaxy_omega_1h_cc, galaxy_omega_2h_cc  = ed_3d_one_two_halo_decomp(galaxy_coords[gal_mask], galaxy_orientations[gal_mask],\n",
     "                                                          host_ids[gal_mask],\n",
     "                                                          galaxy_coords[gal_mask], host_ids[gal_mask],\n",
     "                                                          rbins,\n",
@@ -734,7 +734,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "galaxy_eta_1h_sc, galaxy_eta_2h_sc  = ed_3d_one_two_halo_decomp(galaxy_coords[gal_mask], galaxy_orientations[gal_mask],\n",
+    "galaxy_omega_1h_sc, galaxy_omega_2h_sc  = ed_3d_one_two_halo_decomp(galaxy_coords[gal_mask], galaxy_orientations[gal_mask],\n",
     "                                                          host_ids[gal_mask],\n",
     "                                                          galaxy_coords[gal_mask], host_ids[gal_mask],\n",
     "                                                          rbins,\n",
@@ -748,7 +748,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "galaxy_eta_1h_cs, galaxy_eta_2h_cs  = ed_3d_one_two_halo_decomp(galaxy_coords[gal_mask], galaxy_orientations[gal_mask],\n",
+    "galaxy_omega_1h_cs, galaxy_omega_2h_cs  = ed_3d_one_two_halo_decomp(galaxy_coords[gal_mask], galaxy_orientations[gal_mask],\n",
     "                                                          host_ids[gal_mask],\n",
     "                                                          galaxy_coords[gal_mask], host_ids[gal_mask],\n",
     "                                                          rbins,\n",
@@ -762,7 +762,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "galaxy_eta_1h_ss, galaxy_eta_2h_ss  = ed_3d_one_two_halo_decomp(galaxy_coords[gal_mask], galaxy_orientations[gal_mask],\n",
+    "galaxy_omega_1h_ss, galaxy_omega_2h_ss  = ed_3d_one_two_halo_decomp(galaxy_coords[gal_mask], galaxy_orientations[gal_mask],\n",
     "                                                          host_ids[gal_mask],\n",
     "                                                          galaxy_coords[gal_mask], host_ids[gal_mask],\n",
     "                                                          rbins,\n",
@@ -793,17 +793,17 @@
     "\n",
     "fig, ax = plt.subplots(figsize=(3.3,3.3))\n",
     "fig.subplots_adjust(left=0.2, right=0.9, bottom=0.2, top=0.9)\n",
-    "l1, = plt.plot(rbin_centers, galaxy_omega, '-', color='black')\n",
-    "l2, = plt.plot(rbin_centers, galaxy_omega_1h, '-', color='red')\n",
-    "l3, = plt.plot(rbin_centers, galaxy_omega_2h, '-', color='blue')\n",
-    "l4, = plt.plot(rbin_centers, galaxy_omega_1h_cc, '-', color='red')\n",
-    "l5, = plt.plot(rbin_centers, galaxy_omega_1h_sc, '--', color='red')\n",
-    "l6, = plt.plot(rbin_centers, galaxy_omega_1h_cs, ':', color='red')\n",
-    "l7, = plt.plot(rbin_centers, galaxy_omega_1h_ss, '-.', color='red')\n",
-    "l8, = plt.plot(rbin_centers, galaxy_omega_2h_cc, '-', color='blue')\n",
-    "l9, = plt.plot(rbin_centers, galaxy_omega_2h_sc, '--', color='blue')\n",
-    "l10, = plt.plot(rbin_centers, galaxy_omega_2h_cs, ':', color='blue')\n",
-    "l11, = plt.plot(rbin_centers, galaxy_omega_2h_ss, '-.', color='blue')\n",
+    "l1, = plt.plot(rbin_centers, galaxy_eta, '-', color='black')\n",
+    "l2, = plt.plot(rbin_centers, galaxy_eta_1h, '-', color='red')\n",
+    "l3, = plt.plot(rbin_centers, galaxy_eta_2h, '-', color='blue')\n",
+    "l4, = plt.plot(rbin_centers, galaxy_eta_1h_cc, '-', color='red')\n",
+    "l5, = plt.plot(rbin_centers, galaxy_eta_1h_sc, '--', color='red')\n",
+    "l6, = plt.plot(rbin_centers, galaxy_eta_1h_cs, ':', color='red')\n",
+    "l7, = plt.plot(rbin_centers, galaxy_eta_1h_ss, '-.', color='red')\n",
+    "l8, = plt.plot(rbin_centers, galaxy_eta_2h_cc, '-', color='blue')\n",
+    "l9, = plt.plot(rbin_centers, galaxy_eta_2h_sc, '--', color='blue')\n",
+    "l10, = plt.plot(rbin_centers, galaxy_eta_2h_cs, ':', color='blue')\n",
+    "l11, = plt.plot(rbin_centers, galaxy_eta_2h_ss, '-.', color='blue')\n",
     "plt.xscale('log')\n",
     "plt.yscale('log')\n",
     "plt.xlabel(r'$r~[h^{-1}\\rm Mpc]$')\n",
@@ -835,21 +835,21 @@
     "\n",
     "fig, ax = plt.subplots(figsize=(3.3,3.3))\n",
     "fig.subplots_adjust(left=0.2, right=0.9, bottom=0.2, top=0.9)\n",
-    "l1, = plt.plot(rbin_centers, galaxy_eta, '-', color='black')\n",
-    "l2, = plt.plot(rbin_centers, galaxy_eta_1h, '-', color='red')\n",
-    "l3, = plt.plot(rbin_centers, galaxy_eta_2h, '-', color='blue')\n",
-    "l4, = plt.plot(rbin_centers, galaxy_eta_1h_cc, '-', color='red')\n",
-    "l5, = plt.plot(rbin_centers, galaxy_eta_1h_sc, '--', color='red')\n",
-    "l6, = plt.plot(rbin_centers, galaxy_eta_1h_cs, ':', color='red')\n",
-    "l7, = plt.plot(rbin_centers, galaxy_eta_1h_ss, '-.', color='red')\n",
-    "l8, = plt.plot(rbin_centers, galaxy_eta_2h_cc, '-', color='blue')\n",
-    "l9, = plt.plot(rbin_centers, galaxy_eta_2h_sc, '--', color='blue')\n",
-    "l10, = plt.plot(rbin_centers, galaxy_eta_2h_cs, ':', color='blue')\n",
-    "l11, = plt.plot(rbin_centers, galaxy_eta_2h_ss, '-.', color='blue')\n",
+    "l1, = plt.plot(rbin_centers, galaxy_omega, '-', color='black')\n",
+    "l2, = plt.plot(rbin_centers, galaxy_omega_1h, '-', color='red')\n",
+    "l3, = plt.plot(rbin_centers, galaxy_omega_2h, '-', color='blue')\n",
+    "l4, = plt.plot(rbin_centers, galaxy_omega_1h_cc, '-', color='red')\n",
+    "l5, = plt.plot(rbin_centers, galaxy_omega_1h_sc, '--', color='red')\n",
+    "l6, = plt.plot(rbin_centers, galaxy_omega_1h_cs, ':', color='red')\n",
+    "l7, = plt.plot(rbin_centers, galaxy_omega_1h_ss, '-.', color='red')\n",
+    "l8, = plt.plot(rbin_centers, galaxy_omega_2h_cc, '-', color='blue')\n",
+    "l9, = plt.plot(rbin_centers, galaxy_omega_2h_sc, '--', color='blue')\n",
+    "l10, = plt.plot(rbin_centers, galaxy_omega_2h_cs, ':', color='blue')\n",
+    "l11, = plt.plot(rbin_centers, galaxy_omega_2h_ss, '-.', color='blue')\n",
     "plt.xscale('log')\n",
     "plt.yscale('log')\n",
     "plt.xlabel(r'$r~[h^{-1}\\rm Mpc]$')\n",
-    "plt.ylabel(r'$\\eta(r)$')\n",
+    "plt.ylabel(r'$\\omega(r)$')\n",
     "plt.ylim([0.005,0.5])\n",
     "plt.show()"
    ]
