--- a/ia_models/IA_Modelling_Demo.ipynb
+++ b/ia_models/IA_Modelling_Demo.ipynb
@@ -535,8 +535,8 @@
    "outputs": [],
    "source": [
     "# calculate alignment correlation functions for the galaxies\n",
-    "galaxy_eta = ed_3d(galaxy_coords, galaxy_orientations, galaxy_coords, rbins, period=halocat.Lbox)\n",
-    "galaxy_omega = ee_3d(galaxy_coords, galaxy_orientations, galaxy_coords, galaxy_orientations, rbins, period=halocat.Lbox)"
+    "galaxy_omega = ed_3d(galaxy_coords, galaxy_orientations, galaxy_coords, rbins, period=halocat.Lbox)\n",
+    "galaxy_eta = ee_3d(galaxy_coords, galaxy_orientations, galaxy_coords, galaxy_orientations, rbins, period=halocat.Lbox)"
    ]
   },
   {
@@ -546,9 +546,9 @@
    "outputs": [],
    "source": [
     "# calculate alignment correlation functions for the haloes\n",
-    "halo_eta = ed_3d(halo_coords[mask], halo_orientations[mask], halo_coords[mask],\n",
+    "halo_omega = ed_3d(halo_coords[mask], halo_orientations[mask], halo_coords[mask],\n",
     "                 rbins, period=halocat.Lbox)\n",
-    "halo_omega = ee_3d(halo_coords[mask], halo_orientations[mask], halo_coords[mask], halo_orientations[mask],\n",
+    "halo_eta = ee_3d(halo_coords[mask], halo_orientations[mask], halo_coords[mask], halo_orientations[mask],\n",
     "                   rbins, period=halocat.Lbox)"
    ]
   },
@@ -590,7 +590,7 @@
     "plt.xscale('log')\n",
     "plt.yscale('log')\n",
     "plt.xlabel(r'$r~[h^{-1}\\rm Mpc]$')\n",
-    "plt.ylabel(r'$\\omega(r)$')\n",
+    "plt.ylabel(r'$\\eta(r)$')\n",
     "plt.legend([p1,p2],['galaxies','haloes'], frameon=False, loc='upper right', fontsize=10)\n",
     "plt.show()\n",
     "\n",
@@ -604,7 +604,7 @@
     "plt.xscale('log')\n",
     "plt.yscale('log')\n",
     "plt.xlabel(r'$r~[h^{-1}\\rm Mpc]$')\n",
-    "plt.ylabel(r'$\\eta(r)$')\n",
+    "plt.ylabel(r'$\\omega(r)$')\n",
     "plt.legend([p1,p2],['galaxies','haloes'], frameon=False, loc='upper right', fontsize=10)\n",
     "plt.show()\n",
     "\n",
