--- a/galaxy_shape_correlations/Modelling_MBII_alignments.ipynb
+++ b/galaxy_shape_correlations/Modelling_MBII_alignments.ipynb
@@ -663,7 +663,7 @@
     "ax.set_title(r'$M_{*}>10^{9} ~[h^{-2}M_{\\odot}]$')\n",
     "ax.set_xscale('log')\n",
     "ax.set_yscale('log')\n",
-    "ax.set_ylabel(r'$\\eta(r)$')\n",
+    "ax.set_ylabel(r'$\\omega(r)$')\n",
     "ax.set_xlabel(r'$r~[h^{-1}{\\rm Mpc}]$')\n",
     "l2, = ax.plot(rbin_centers, result_ed_1, 'o', color='black')\n",
     "#l2, = ax.plot(rbin_centers, result_ed_2, 'o', color='red')\n",
@@ -1019,7 +1019,7 @@
     "ax.set_xscale('log')\n",
     "ax.set_yscale('log')\n",
     "ax.set_ylim([0.005,0.1])\n",
-    "ax.set_ylabel(r'$\\eta(r)$')\n",
+    "ax.set_ylabel(r'$\\omega(r)$')\n",
     "ax.set_xlabel(r'$r~[h^{-1}{\\rm Mpc}]$')\n",
     "l2, = ax.plot(rbin_centers, result_ed_1, 'o', color='black')\n",
     "l2, = ax.plot(rbin_centers, result_ed_11, '-', color='black')\n",
@@ -1038,21 +1038,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
